# anima-mcp

./: .agent-coordination  .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.md  CURSOR_HANDOFF.md  DEPLOYMENT.md  EXPLORATION_2026-01-12.md  EXPRESSION_MOODS_COMPLETE.md  LEARNING_VISUALIZATION_COMPLETE.md  README.md  RESTORE_LUMEN.md  anima_config.yaml.example  deploy.sh  install_pi.sh  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-pi.txt  requirements.txt  stable_creature.py
config/: anima-creature.service  anima.env.example
docs/: CONTROL_CENTER.md  COORDINATION_REFLECTION.md  CURSOR_MCP_FIX.md  EEG_CLEANUP_SUMMARY.md  EEG_CODE_ANALYSIS.md  G_T_AUGMENTATIONS.md  INDEX.md  LUMEN_EXPRESSION_PHILOSOPHY.md  LUMEN_NEXT_STEPS.md  NEURO_PSYCH_FRAMING.html  TOOLS_REFERENCE.md  TOOL_CONSOLIDATION.md  architecture.html  control_center.html  control_center_backup.html  developer-index.md  gallery.html  index.md  schema.html
docs/static/: shared.js  (+1 more)
examples/: governance_integration.py
scripts/: alert_check.sh  analyze_message_patterns.py  anima-watchdog.sh  anima_dashboard.py  answer_lumen_questions.py  auto_restore.sh  backup.sh  backup_db.sh  backup_state.sh  bootstrap_deploy.py  bump_epoch.py  call_git_pull_via_http.py  check_display_loop.py  check_tunnel_consistency.sh  cloudflared-lumen.service  com.unitares.lumen-backup.plist  configure_usb_gadget.sh  db_maintenance.sh  deploy.sh  deploy_to_pi.sh  deploy_via_http.sh  diagnose_anima.sh  diagnose_ssh.sh  enable_usb_gadget.sh  enable_usb_serial.sh  envelope.pi.example  find_lumen.py  find_lumen_comprehensive.sh  find_pi.sh  find_pi_hotspot.sh  fix_awakening_count.py  fix_ssh_via_http.sh  health_check.sh  mac_backup_lumen.sh  merge_lumen_identities.py  message_server.py  monitor_health_pi.sh  monitor_remote.sh  paper_figures.py  pi_monitor.py  (+30 more)
systemd/: 99-anima-net.conf  anima-broker-failed.service  anima-broker.service  anima-restore.service  anima-watchdog.service  anima-watchdog.timer  anima.service  shutdown-listener.service  wifi-pm-disable.service  wifi-watchdog.service  wifi-watchdog.timer
tests/: conftest.py  test_accessors.py  test_activity_state.py  test_adaptive_prediction.py  test_agency.py  test_anima.py  test_anima_extended.py  test_anima_history.py  test_anima_utterance.py  test_art_era.py  test_atomic_write.py  test_audio.py  test_belief_modulation.py  test_calibration_drift.py  test_circadian_dream.py  test_cognitive_inference.py  test_communication_handlers_extended.py  test_computational_neural.py  test_config.py  test_continuity.py  test_data_analysis.py  test_display_ops_extended.py  test_drawing_eisv.py  test_drawing_engine.py  test_drawing_feedback.py  test_drawing_history.py  test_drift_integration.py  test_eisv_awareness.py  test_eisv_mapper.py  test_eisv_mapper_extended.py  test_era_registry.py  test_error_recovery.py  test_experiential_filter.py  test_experiential_integration.py  test_experiential_marks.py  test_expression.py  test_expression_moods.py  test_face_state.py  test_gestural_era.py  test_grounded_self_answer.py  (+72 more)
(+265 files in other folders)
